# eaps-execution

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Manifest.toml  Project.toml  README.rst  poetry.toml  pyproject.toml
eaps_execution/src/: ProductionScheduling.jl
eaps_execution/src/DataProcessing/: DataPlotting.jl
eaps_execution/src/Execution/: prod_connection.py  prod_env.py  prod_execution.py  util.py
eaps_execution/src/MachineModels/: CleaningMachine.jl  FlameCuttingMachine.jl  LaserCuttingMachine.jl  SandblastingMachine.jl
eaps_execution/src/Scheduling/: ProductionSystem.jl  Scheduler.jl  SettingsStatus.jl
eaps_execution/test/: ProductionScheduling.jl
eaps_execution/trials/: experiment.py  production.toml  scheduling.py
eaps_execution/trials/environments/: FactoryEnv.jl  connection.toml
eaps_execution/trials/modeling/: TrainModels.jl
eaps_execution/trials/scenario/: Strompreise_2024-01-30.csv  orders_prod2901.json  orders_prod3001.json  orders_prod3101.json
eaps_execution/trials/scenario/productionsystem/: machines.json  machines_models_errors_measurement.json  products2901.json  products3001.json  products3101.json
eaps_execution/trials/test/: ProductionScheduling.jl  runtests.jl
eaps_execution/trials/util/: server.py
